Adding some content on the default notification chrome shows

--- a/src/demo/web-app/index.html
+++ b/src/demo/web-app/index.html
@@ -1,6 +1,7 @@
 <html>
 <head>
   <link rel="stylesheet" media="all" href="styles.css">
+  <meta name="viewport" content="width=device-width,initial-scale=1">
 </head>
 <body>
   <p class="enable-push">
