Adding final pieces of content for params and some ux best practices

--- a/src/demo/web-app/notification-ui/index.html
+++ b/src/demo/web-app/notification-ui/index.html
@@ -40,6 +40,14 @@
     </li>
   </ul>
 
+  <h1>Bad Notifications</h1>
+
+  <ul>
+    <li>
+      <button class="js-notification-duplicate-url">Duplicate URL</button>
+    </li>
+  </ul>
+
   <script src="notification-ui.js" async></script>
 </body>
 </html>
