Adding some into on the tags / notifications

--- a/src/demo/web-app/notification-ui/index.html
+++ b/src/demo/web-app/notification-ui/index.html
@@ -40,7 +40,15 @@
     </li>
   </ul>
 
-  <h1>Bad Notifications</h1>
+  <h1>Notification Behaviour</h1>
+
+  <ul>
+    <li>
+      <button class="js-notification-tag">Tag</button>
+    </li>
+  </ul>
+
+  <h1>Bad UX Notifications</h1>
 
   <ul>
     <li>
