A little more info on the notification behavious

--- a/src/demo/web-app/notification-ui/index.html
+++ b/src/demo/web-app/notification-ui/index.html
@@ -44,7 +44,19 @@
 
   <ul>
     <li>
+      <button class="js-notification-default">Default Behaviour</button>
+    </li>
+    <li>
       <button class="js-notification-tag">Tag</button>
+    </li>
+    <li>
+      <button class="js-notification-renotify">Renotify</button>
+    </li>
+    <li>
+      <button class="js-notification-silent">Silent</button>
+    </li>
+    <li>
+      <button class="js-notification-require-interaction">Require Interaction</button
     </li>
   </ul>
 
