Adding some more content on notification behaviour

--- a/src/demo/web-app/notification-ui/index.html
+++ b/src/demo/web-app/notification-ui/index.html
@@ -38,6 +38,9 @@
     <li>
       <button class="js-notification-dir-rtl">Direction: RTL</button>
     </li>
+    <li>
+      <button class="js-notification-timestamp">Timestamp</button>
+    </li>
   </ul>
 
   <h1>Notification Behaviour</h1>
@@ -56,7 +59,7 @@
       <button class="js-notification-silent">Silent</button>
     </li>
     <li>
-      <button class="js-notification-require-interaction">Require Interaction</button
+      <button class="js-notification-require-interaction">Require Interaction</button>
     </li>
   </ul>
 
