--- a/src/demo/web-app/notification-behavior/index.html
+++ b/src/demo/web-app/notification-behavior/index.html
@@ -17,7 +17,16 @@
       <button class="js-cache-page">Cache a Page and Open</button>
     </li>
     <li>
+      <button class="js-data-notification">Adding Data to Notification</button>
+    </li>
+    <li>
       <button class="js-merge-notification">Merge Notification</button>
+    </li>
+    <li>
+      <button class="js-must-show-notification">Must Show Notification (4s Delay)</button>
+    </li>
+    <li>
+      <button class="js-send-message-to-page">Send Message to Page (4s Delay)</button>
     </li>
   </ul>
 
