Adding more contents and images

--- a/src/demo/web-app/index.html
+++ b/src/demo/web-app/index.html
@@ -2,6 +2,7 @@
 <head>
   <link rel="stylesheet" media="all" href="styles.css">
   <meta name="viewport" content="width=device-width,initial-scale=1">
+  <link rel="manifest" href="/manifest.json">
 </head>
 <body>
   <p class="enable-push">
