Initial state of buttons to disabled

--- a/src/demos/notification-examples/index.html
+++ b/src/demos/notification-examples/index.html
@@ -35,7 +35,7 @@
     with all the UI options set, click the 'All the Options' button.</p>
 
     <p>
-      <button class="js-notification-overview">All the Options</button>
+      <button class="js-notification-overview" disabled>All the Options</button>
     </p>
 
     <p>The buttons will be enabled if the browser has support for the feature.
@@ -47,14 +47,14 @@
     <p>Basic example of a notification with a basic title and body.</p>
     <p>
       <button class="js-notification-title-body" disabled>Title &amp; Body</button>
-      <button class="js-notification-long-title-body">Long Title &amp; Body</button>
+      <button class="js-notification-long-title-body" disabled>Long Title &amp; Body</button>
     </p>
 
     <h6>Notification Icon</h6>
     <p>The icon on a notification is the image on the left of the title and
     body. This is normally an image relevant to the tweet being sent.</p>
     <p>
-      <button class="js-notification-icon">Icon</button>
+      <button class="js-notification-icon" disabled>Icon</button>
     </p>
 
     <h6>Notification Image</h6>
@@ -63,7 +63,7 @@
     experimental web platform features in Chrome and the results vary between
     Android and Desktop.</p>
     <p>
-      <button class="js-notification-image">Image</button>
+      <button class="js-notification-image" disabled>Image</button>
     </p>
 
     <h6>Action Buttons</h6>
@@ -71,15 +71,15 @@
     then you can define "actions", which add buttons to the notification that
     you can respond to.</p>
     <p>
-      <button class="js-notification-actions">Actions</button>
+      <button class="js-notification-actions" disabled>Actions</button>
     </p>
 
     <h6>Language Direction</h6>
     <p>You can set a "dir" option to indicate if the test should be displayed
     "left-to-right" or "right-to-left".</p>
     <p>
-      <button class="js-notification-dir-ltr">Direction: LTR</button>
-      <button class="js-notification-dir-rtl">Direction: RTL</button>
+      <button class="js-notification-dir-ltr" disabled>Direction: LTR</button>
+      <button class="js-notification-dir-rtl" disabled>Direction: RTL</button>
     </p>
 
     <h6>Tag</h6>
@@ -87,7 +87,7 @@
     is shown with the same tag, any old notifications with that tag are
     removed before the new notification is shown.</p>
     <p>
-      <button class="js-notification-tag">Tag</button>
+      <button class="js-notification-tag" disabled>Tag</button>
     </p>
 
     <h6>Renotify</h6>
@@ -99,7 +99,7 @@
     replacing notifications is the same behavior as a completely new
     notification.</p>
     <p>
-      <button class="js-notification-renotify">Renotify</button>
+      <button class="js-notification-renotify" disabled>Renotify</button>
     </p>
 
     <h6>Silent</h6>
@@ -108,7 +108,7 @@
     the notification is displayed, but there is none of the default behaviors
     like sound, vibration and screen wake.</p>
     <p>
-      <button class="js-notification-silent">Silent</button>
+      <button class="js-notification-silent" disabled>Silent</button>
     </p>
 
     <h6>Require Interaction</h6>
@@ -118,13 +118,13 @@
     <p>To get the same behaviour on desktop and mobile you can set the
     "require-interaction" option to true.</p>
     <p>
-      <button class="js-notification-require-interaction">Require Interaction</button>
+      <button class="js-notification-require-interaction" disabled>Require Interaction</button>
     </p>
 
     <h6>Timestamp</h6>
     <p></p>
     <p>
-      <button class="js-notification-timestamp">Timestamp</button>
+      <button class="js-notification-timestamp" disabled>Timestamp</button>
     </p>
 
 
@@ -140,14 +140,14 @@
     of writing. It's used to replace the browser icon that is shown by default.
     </p>
     <p>
-      <button class="js-notification-badge">Badge</button>
+      <button class="js-notification-badge" disabled>Badge</button>
     </p>
 
     <h6>Vibration</h6>
     <p>You can define a pattern of vibrations to make a tune. This only
     applies to mobile devices since laptops tend not to vibrate.</p>
     <p>
-      <button class="js-notification-vibrate">Vibrate</button>
+      <button class="js-notification-vibrate" disabled>Vibrate</button>
     </p>
 
     <h3>Not Implemented Anywhere Yet</h3>
@@ -159,7 +159,7 @@
     <p>The sound option has been defined, but at the time of writing no browser
     has implemented it yet.</p>
     <p>
-      <button class="js-notification-sound">Sound</button>
+      <button class="js-notification-sound" disabled>Sound</button>
     </p>
   </main>
 
