Hopefully adding a sitemap :)

--- a/src/demos/notification-examples/index.html
+++ b/src/demos/notification-examples/index.html
@@ -25,6 +25,8 @@
   </header>
 
   <main>
+    <h2>Notification Options</h2>
+
     <p>This page contains a set of example notifications that you can interact
     with to see what is possible with notifications.</p>
 
@@ -161,6 +163,52 @@
     <p>
       <button class="js-notification-sound" disabled>Sound</button>
     </p>
+
+    <h2>Notification Common Practices</h2>
+
+    <p></p>
+
+    <h6>Open a Window</h6>
+    <p></p>
+    <p>
+      <button class="js-open-window" disabled>Open Window</button>
+    </p>
+
+    <h6>Focus a Window or Open</h6>
+    <p></p>
+    <p>
+      <button class="js-focus-window" disabled>Focus a Window OR Open</button>
+    </p>
+
+    <h6>Cache a Page and Open</h6>
+    <p></p>
+    <p>
+      <button class="js-cache-page" disabled>Cache a Page and Open</button>
+    </p>
+
+    <h6>Adding Data to a Notification</h6>
+    <p></p>
+    <p>
+      <button class="js-data-notification" disabled>Adding Data to Notification</button>
+    </p>
+
+    <h6>Merging Notifications Programmatically</h6>
+    <p></p>
+    <p>
+      <button class="js-merge-notification" disabled>Merge Notification</button>
+    </p>
+
+    <h6>Must show a Notification</h6>
+    <p></p>
+    <p>
+      <button class="js-must-show-notification" disabled>Must Show Notification (4s Delay)</button>
+    </p>
+
+    <h6>Send a Message to the Page</h6>
+    <p></p>
+    <p>
+      <button class="js-send-message-to-page" disabled>Send Message to Page (4s Delay)</button>
+    </p>
   </main>
 
   <footer>
@@ -173,6 +221,7 @@
   </footer>
 
   <script src="notification-examples.js"></script>
+  <script src="notification-common-practices.js"></script>
   <script>
     (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
     (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
