--- a/src/demos/notification-examples/index.html
+++ b/src/demos/notification-examples/index.html
@@ -54,9 +54,8 @@
     <p>Basic example of a notification with a basic title and body.</p>
     <p class="demo-btns">
       <button class="js-notification-title-body" disabled>Title &amp; Body</button>
-    </p>
-    <p class="demo-btns">
       <button class="js-notification-long-title-body" disabled>Long Title &amp; Body</button>
+      <a class="button details-btn" href="/chapter-05/02-display-a-notification/#title-and-body-options">Details &amp; Code</a>
     </p>
 
     <h6>Notification Icon</h6>
@@ -64,6 +63,7 @@
     body text.</p>
     <p class="demo-btns">
       <button class="js-notification-icon" disabled>Icon</button>
+      <a class="button details-btn" href="/chapter-05/02-display-a-notification/#icon">Details &amp; Code</a>
     </p>
 
     <h6>Notification Image</h6>
@@ -73,6 +73,7 @@
       Android and Desktop.</p>
     <p class="demo-btns">
       <button class="js-notification-image" disabled>Image</button>
+      <a class="button details-btn" href="/chapter-05/02-display-a-notification/#image">Details &amp; Code</a>
     </p>
 
     <h6>Action Buttons</h6>
@@ -83,6 +84,7 @@
       as is.</p>
     <p class="demo-btns">
       <button class="js-notification-actions" disabled>Actions</button>
+      <a class="button details-btn" href="/chapter-05/02-display-a-notification/#actions">Details &amp; Code</a>
     </p>
 
     <h6>Language Direction</h6>
@@ -90,9 +92,8 @@
     "left-to-right" or "right-to-left".</p>
     <p class="demo-btns">
       <button class="js-notification-dir-ltr" disabled>Direction: LTR</button>
-    </p>
-    <p class="demo-btns">
       <button class="js-notification-dir-rtl" disabled>Direction: RTL</button>
+      <a class="button details-btn" href="/chapter-05/02-display-a-notification/#direction">Details &amp; Code</a>
     </p>
 
     <h6>Tag</h6>
@@ -101,6 +102,7 @@
     removed before the new notification is shown.</p>
     <p class="demo-btns">
       <button class="js-notification-tag" disabled>Tag</button>
+      <a class="button details-btn" href="/chapter-05/03-notification-behaviour/#tag">Details &amp; Code</a>
     </p>
 
     <h6>Renotify</h6>
@@ -117,6 +119,7 @@
     affected.</p>
     <p class="demo-btns">
       <button class="js-notification-renotify" disabled>Renotify</button>
+      <a class="button details-btn" href="/chapter-05/03-notification-behaviour/#renotify">Details &amp; Code</a>
     </p>
 
     <h6>Silent</h6>
@@ -126,6 +129,7 @@
     like sound, vibration and screen wake.</p>
     <p class="demo-btns">
       <button class="js-notification-silent" disabled>Silent</button>
+      <a class="button details-btn" href="/chapter-05/03-notification-behaviour/#silent">Details &amp; Code</a>
     </p>
 
     <h6>Require Interaction</h6>
@@ -136,6 +140,7 @@
     <strong>must</strong> click or dismiss the notification.</p>
     <p class="demo-btns">
       <button class="js-notification-require-interaction" disabled>Require Interaction</button>
+      <a class="button details-btn" href="/chapter-05/03-notification-behaviour/#requires-interaction">Details &amp; Code</a>
     </p>
 
 
@@ -152,6 +157,7 @@
     </p>
     <p class="demo-btns">
       <button class="js-notification-badge" disabled>Badge</button>
+      <a class="button details-btn" href="/chapter-05/02-display-a-notification/#badge">Details &amp; Code</a>
     </p>
 
     <h6>Vibration</h6>
@@ -159,6 +165,7 @@
     applies to mobile devices since laptops tend not to vibrate.</p>
     <p class="demo-btns">
       <button class="js-notification-vibrate" disabled>Vibrate</button>
+      <a class="button details-btn" href="/chapter-05/02-display-a-notification/#vibrate">Details &amp; Code</a>
     </p>
 
     <h3>Other Options</h3>
@@ -167,6 +174,7 @@
     with a custom timestamp.</p>
     <p class="demo-btns">
       <button class="js-notification-timestamp" disabled>Timestamp</button>
+      <a class="button details-btn" href="/chapter-05/02-display-a-notification/#timestamp">Details &amp; Code</a>
     </p>
 
     <h6>Sound</h6>
@@ -174,6 +182,7 @@
     has implemented it yet.</p>
     <p class="demo-btns">
       <button class="js-notification-sound" disabled>Sound</button>
+      <a class="button details-btn" href="/chapter-05/02-display-a-notification/#sound">Details &amp; Code</a>
     </p>
 
     <h2>Notification Common Practices</h2>
@@ -187,6 +196,7 @@
     clicked on a notification.</p>
     <p class="demo-btns">
       <button class="js-open-window" disabled>Open Window</button>
+      <a class="button details-btn" href="/chapter-05/04-common-notification-patterns/#open-a-window">Details &amp; Code</a>
     </p>
 
     <h6>Focus a Window or Open</h6>
@@ -201,6 +211,7 @@
 
     <p class="demo-btns">
       <button class="js-focus-window" disabled>Focus a Window OR Open</button>
+      <a class="button details-btn" href="/chapter-05/04-common-notification-patterns/#focus-an-existing-window">Details &amp; Code</a>
     </p>
 
     <h6>Adding Data to a Notification</h6>
@@ -213,6 +224,7 @@
       clicked.</p>
     <p class="demo-btns">
       <button class="js-data-notification" disabled>Adding Data to Notification</button>
+      <a class="button details-btn" href="/chapter-05/04-common-notification-patterns/#adding-data-to-a-notification">Details &amp; Code</a>
     </p>
 
     <h6>Merging Notifications Programmatically</h6>
@@ -226,6 +238,7 @@
     to see what it does.</p>
     <p class="demo-btns">
       <button class="js-merge-notification" disabled>Merge Notification</button>
+      <a class="button details-btn" href="/chapter-05/04-common-notification-patterns/#merging-notifications">Details &amp; Code</a>
     </p>
 
     <h6>Must show a Notification</h6>
@@ -240,6 +253,7 @@
     notification.</p>
     <p class="demo-btns">
       <button class="js-must-show-notification" disabled>Must Show Notification (4s Delay)</button>
+      <a class="button details-btn" href="/chapter-05/04-common-notification-patterns/#the-exception-to-showing-a-notification">Details &amp; Code</a>
     </p>
 
     <h6>Send a Message to the Page</h6>
@@ -249,6 +263,7 @@
     to the page, which is printed to the console.</p>
     <p class="demo-btns">
       <button class="js-send-message-to-page" disabled>Send Message to Page (4s Delay)</button>
+      <a class="button details-btn" href="/chapter-05/04-common-notification-patterns/#message-page-from-a-push-event">Details &amp; Code</a>
     </p>
   </main>
 
