--- a/src/demos/web-app/index.html
+++ b/src/demos/web-app/index.html
@@ -40,7 +40,7 @@
         <input id="enable-push-checkbox" class="js-push-toggle-checkbox" type="checkbox" disabled></input>
         <label for="enable-push-checkbox"></label>
       </div>
-      <div class="message">Enable Push</div>
+      <div class="message">Enable Notifications</div>
     </div>
 
     <h2>Admin Panel</h2>
