Adding icon to default trigger push message

--- a/src/demos/web-app/admin.html
+++ b/src/demos/web-app/admin.html
@@ -45,7 +45,7 @@
   "notification": {
     "title": "Example Title",
     "body": "This will be the body text for the notification.",
-    "icon": "/images/icon.png"
+    "icon": "/images/icon-512x512.png"
   }
 }</textarea>
 
