Adding more fixes and content to use web-push lib

--- a/src/demos/node-server/frontend/admin.html
+++ b/src/demos/node-server/frontend/admin.html
@@ -25,11 +25,8 @@
   </header>
 
   <main>
-    <p>You'd want this page to be restricted some how, perhaps by login or
-    could be a restricted application then is only accessible locally.</p>
-
     <p>This page is just an example that gets all the subscriptions and allows
-    triggering of pushes to demostrate a rough implementation.</p>
+    triggering of pushes to demostrate a basic implementation.</p>
 
     <h2>Send Push Message</h2>
 
@@ -63,6 +60,11 @@
 
       </tbody>
     </table>
+
+    <h3>Please Note</h3>
+
+    <p>You'd want this page to be restricted some how, perhaps by login or
+    could be a restricted application then is only accessible locally.</p>
   </main>
 
   <script src="admin.js" async defer></script>
